UPDATE- can now create a new note with date created, title, and content; can edit/delete notes; have an alert box set up to ask user if they actually want to delete; figured out the xml to use androids built in icons for add, delete, and search (search function still needed)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,12 @@
         android:orderInCategory="0"
         app:showAsAction="always"/>
 
+    <item
+        android:enabled="true"
+        android:title="create"
+        android:id="@+id/action_main_new_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="0"
+        app:showAsAction="always"/>
+
 </menu>
