Changed search functions to take a mark argument to allow it to search for multiple marks, added topics to Note class, added textview for mentions and topics. mentions and topics should now display with the note.

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -24,4 +24,18 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         tools:text="CONTENT" />
+
+    <TextView
+        android:id="@+id/list_note_mentions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        tools:text="MENTIONS" />
+
+    <TextView
+        android:id="@+id/list_note_topics"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        tools:text="TOPICS" />
 </LinearLayout>
