--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -25,12 +25,45 @@
         android:id="@+id/noteContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/noteTitle"
-        android:layout_centerHorizontal="true"
         android:ems="10"
         android:gravity="top"
         android:hint="Enter your note here"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/noteTitle"
+        android:layout_above="@+id/mentions" />
+
+    <TextView
+        android:id="@+id/mentions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@+id/topics"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/topics"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@+id/identifiers"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/identifiers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@+id/refrences"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/refrences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </android.widget.RelativeLayout>
 
