--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,20 @@
     android:layout_height="match_parent"
     tools:context="com.brendan.notetakinghw2.MainActivity">
 
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
+        android:orderInCategory="0"
+        app:showAsAction="always" />
+
     <ListView
         android:id="@+id/mainListViewNotes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner1" />
 
 </android.widget.RelativeLayout>
 
