--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,36 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Add New Note-->
-
-    <item
-        android:enabled="true"
-        android:title="create"
-        android:id="@+id/action_main_new_note"
-        android:icon="@android:drawable/ic_menu_add"
+    <!--
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
         android:orderInCategory="0"
-        app:showAsAction="always"/>
+        android:spinnerMode="dropdown"
+        app:showAsAction="always" />     -->
+    <item
+        android:id="@+id/action_main_new_note"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_add"
+        android:orderInCategory="1"
+        android:title="create"
+        app:showAsAction="always" />
 
     <item
         android:enabled="true"
         android:title="create"
         android:id="@+id/action_main_new_search"
         android:icon="@android:drawable/ic_menu_search"
-        android:orderInCategory="0"
+        android:orderInCategory="1"
         app:showAsAction="always"/>
-
+<!--
     <item
         android:enabled="true"
         android:title="create"
         android:id="@+id/action_main_new_dots"
         android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:orderInCategory="0"
-        app:showAsAction="always"/>
-
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown" />
+        android:orderInCategory="1"
+        app:showAsAction="always"/>     -->
 
 </menu>
