Added searchview but need to fix the filter to accept our note objects, or create a data structure of strings from the notes.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -20,13 +20,15 @@
         android:title="create"
         app:showAsAction="always" />
 
+    <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
     <item
         android:enabled="true"
         android:title="create"
         android:id="@+id/action_main_new_search"
         android:icon="@android:drawable/ic_menu_search"
+        app:actionViewClass="android.widget.SearchView"
         android:orderInCategory="1"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom|collapseActionView"/>
 <!--
     <item
         android:enabled="true"
