--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Add New Note-->
-    <!--
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:orderInCategory="0"
-        android:spinnerMode="dropdown"
-        app:showAsAction="always" />     -->
+
     <item
         android:id="@+id/action_main_new_note"
         android:enabled="true"
@@ -20,22 +12,13 @@
         android:title="create"
         app:showAsAction="always" />
 
-    <!--app:actionViewClass="android.support.v7.widget.SearchView"
     <item
         android:enabled="true"
         android:title="create"
-        android:id="@+id/action_main_new_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:id="@+id/action_main_sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
         app:actionViewClass="android.widget.SearchView"
         android:orderInCategory="1"
-        app:showAsAction="ifRoom|collapseActionView"/>-->
-<!--
-    <item
-        android:enabled="true"
-        android:title="create"
-        android:id="@+id/action_main_new_dots"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:orderInCategory="1"
-        app:showAsAction="always"/>     -->
+        app:showAsAction="ifRoom|collapseActionView"/>
 
 </menu>
